--- a/maven-release-test-api/pom.xml
+++ b/maven-release-test-api/pom.xml
@@ -7,11 +7,11 @@
     <version>1.0.0-SNAPSHOT</version>
   </parent>
 
-  <artifactId>maven-release-test-data</artifactId>
-  <version>1.3.0-SNAPSHOT</version>
+  <artifactId>maven-release-test-api</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
 
-  <name>maven-release-test-data</name>
-  <description>A simple maven-release-test-data.</description>
+  <name>maven-release-test-api</name>
+  <description>A simple maven-release-test-api.</description>
   <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
 
@@ -22,6 +22,11 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>kjd.playground</groupId>
+      <artifactId>maven-release-test-data</artifactId>
+      <version>1.3.0-SNAPSHOT</version>
+    </dependency>
   </dependencies>
 
   <build>
